# Tizen-NN-Runtime

./: .gitignore  README.md
Camera/: .cproject  .project  .tproject  CMakeLists.txt  tizen-manifest.xml
Camera/Debug/: .gdbcommand  .ninja_deps  .ninja_log  build.ninja  compile_commands.json  target.ninja
Camera/Debug/src/: subdir.ninja
Camera/inc/: data.h  main.h
Camera/packaging/: Camera.spec
Camera/src/: data.c  main.c  view.c
Xor/: .cproject  .project  CMakeLists.txt  xorGate.lite
Xor/packaging/: Xor.spec
Xor/src/: Xor.cpp
cam/: CMakeLists.txt
cam/packaging/: cam.spec
newnnfw/: .ctags  CMakeLists.txt  LICENSE  Makefile  README.md  run
newnnfw/benchmark/: CMakeLists.txt
newnnfw/benchmark/acl/: Benchmark.cpp  CMakeLists.txt  benchmark_googlenet.cpp  benchmark_inception_v3.cpp  benchmark_mobilenet.cpp
newnnfw/cmake/: ApplyCompileFlags.cmake  CfgOptionFlags.cmake
newnnfw/cmake/config/: config_aarch64-linux.cmake  config_aarch64-tizen.cmake  config_arm64-android.cmake  config_armv7l-linux.cmake  config_armv7l-tizen.cmake  config_x86_64-linux.cmake
newnnfw/cmake/modules/: ExternalProjectTools.cmake  ExternalSourceTools.cmake  OptionTools.cmake
newnnfw/cmake/option/: identify_platform.cmake  option_aarch64-linux.cmake  option_aarch64-tizen.cmake  option_arm64-android.cmake  option_armv7l-linux.cmake  option_armv7l-tizen.cmake  option_linux.cmake  option_x86_64-linux.cmake
newnnfw/contrib/: CMakeLists.txt
newnnfw/contrib/bindacl/: CMakeLists.txt  README.md
newnnfw/contrib/bindacl/src/: nnapi_acl.cc
newnnfw/contrib/convacl/: CMakeLists.txt
newnnfw/contrib/convacl/src/: io_accessor.cc  nnapi_acl_conv.cc
newnnfw/contrib/detection/: CMakeLists.txt  detection.cpp
newnnfw/contrib/example/: example.cpp
newnnfw/contrib/jniacl/: CMakeLists.txt
newnnfw/contrib/jniacl/src/: io_accessor.cc  io_accessor.h  jniacl_main.cc
newnnfw/contrib/kerneltesting/: CMakeLists.txt
newnnfw/contrib/kerneltesting/conv2d/: CMakeLists.txt  OperationUtils.h  common.h  compatibility.h  io_accessor.cpp  io_accessor.h  nnfw_conv2d_test.cpp  optimized_ops.h  types.h
newnnfw/contrib/opencl_test/: CMakeLists.txt
newnnfw/contrib/opencl_test/src/: opencl_test.cc
newnnfw/contrib/tf_test/: CMakeLists.txt  tf_test.cpp
newnnfw/docs/: HowToContribute.md  HowToImplementOperatorKernel.md  howto.md  roadmap.md  workgroups.md
newnnfw/docs/doxygen/: Doxyfile
newnnfw/docs/fig/: nnfw_architecture.pptx  nnfw_behavior.pptx
newnnfw/docs/howto/: BuildTFfromSource.md  CrossBuildForAarch64.md  CrossBuildForArm.md  HowToAddUnittest.md  HowToUseDockerImage.md
newnnfw/docs/howto/device/: xu3_ubuntu.md  xu4_tizen.md  xu4_ubuntu.md
newnnfw/docs/project/: 2018_high_level_design.md  2018_requirement_specification.md
newnnfw/docs/tests/: Convolution_manual_3x3.xlsx  Softmax_manual.xlsx
newnnfw/include/: NeuralNetworks.h  NeuralNetworksEx.h  NeuralNetworksExShim.h  NeuralNetworksLoadHelpers.h  NeuralNetworksShim.h
newnnfw/include/kernel/acl/: Add.h  Concatenation.h  Conv2D.h  DepthwiseConv2D.h  FullyConnected.h  Mul.h  Pooling.h  ReLU.h  ReLU6.h  Reshape.h  Softmax.h  (+1 more)
newnnfw/include/util/: EnvVar.h  benchmark.h  environment.h  fp32.h  vector.h
newnnfw/libs/: CMakeLists.txt
newnnfw/libs/ARMComputeEx/: CMakeLists.txt  resolve_includes.py
newnnfw/libs/support/: CMakeLists.txt
newnnfw/libs/util/: CMakeLists.txt
newnnfw/packaging/: nnfw.spec
newnnfw/runtimes/: CMakeLists.txt
newnnfw/runtimes/logging/: CMakeLists.txt
newnnfw/runtimes/neurun/: CMakeLists.txt
newnnfw/runtimes/pure_arm_compute/: CMakeLists.txt
newnnfw/runtimes/template/: CMakeLists.txt
newnnfw/runtimes/tests/: CMakeLists.txt
newnnfw/scripts/: docker_helper
newnnfw/scripts/command/: build  common.sh  docker-run  docker-shell  docker_build.sh  docker_build_cross_arm_neurun.sh  docker_build_cross_arm_ubuntu.sh  docker_build_cross_arm_ubuntu_without_aclbuild.sh  docker_build_tizen_cross.sh  docker_build_ubuntu_coverity.sh  docker_build_ubuntu_svace.sh  docker_coverage_report.sh  docker_cross_test_coverage_build.sh  docker_env_neurun  docker_env_pureacl_tflite_benchmark_model  docker_gbs_build.sh  docker_run_test.sh  format-checker.sh  gbs.conf  gen_coverage_report.sh  imported_url.txt  nnfw_docker  nnfw_docker_tizen  run_coverity.sh  tizen_xu4_test.sh
newnnfw/scripts/docker/: Dockerfile  Dockerfile_tizen
newnnfw/scripts/git-hooks/: install_hooks.sh  pre-push
newnnfw/tests/framework/: run_test.sh
newnnfw/tools/: CMakeLists.txt
newnnfw/tools/cross/: build_android_rootfs.sh  build_rootfs.sh
newnnfw/tools/extract_weights_from_tflite/: extract.py  extract_from_tflite.sh  print_op.py
newnnfw/tools/image_importer/: image_importer.py
newnnfw/tools/modelgen/: CONV_2D.template.json  modelgen.py  modelgen.sh
newnnfw/tools/nnapi_quickcheck/: CMakeLists.txt
newnnfw/tools/nnapi_test/: CMakeLists.txt
newnnfw/tools/opencl_tool/: CMakeLists.txt
newnnfw/tools/pbfile_tool/: pb_info.py  readme.md
newnnfw/tools/tensorflow_model_freezer/: base_freezer.py  model_freezer_util.py  readme.md
newnnfw/tools/test_driver/: README.md  benchmark_op_list.txt  common.sh  neurun_frameworktest_list.txt  nnfw_kernel_env_list.txt  run_benchmark.sh  run_benchmark_acl.sh  run_benchmark_op.sh  run_benchmark_tflite_model.in  run_benchmark_tflite_model.sh  run_frameworktest.sh  run_unittest.sh  test_driver.sh
newnnfw/tools/tflite_benchmark/: CMakeLists.txt
newnnfw/tools/tflite_benchmark_model/: CMakeLists.txt  benchmark_main.cc  benchmark_model.cc  benchmark_model.h  benchmark_params.cc  benchmark_params.h  benchmark_tflite_model.cc  benchmark_tflite_model.h  command_line_flags.cc  command_line_flags.h  logging.h  profile_summarizer.cc
newnnfw/tools/tflite_examples/: CMakeLists.txt
newnnfw/tools/tflite_run/: CMakeLists.txt
newnnfw/tools/tflitefile_tool/: model_parser.py  operation.py  operator_parser.py  operator_wrapping.py  perf_predictor.py  select_operator.py  tensor_wrapping.py
webcam/: CMakeLists.txt  Makefile
webcam/packaging/: cam.spec
webcam/src/: cam.cpp  cam_tflite_test.cpp
(+620 files in other folders)
