CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Xor)

FILE(GLOB SRCS src/*.cpp)

SET(INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(BINDIR "${DESTDIR}/bin")

SET(CMAKE_C_FLAGS_DEBUG "-g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

set(TF_DIR /home/lazineer/tensorflow)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRCS})

#INCLUDE_DIRECTORIES(${TF_DIR})
TARGET_LINK_LIBRARIES(Xor tensorflow-lite pthread dl)

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${BINDIR})
