cmake_minimum_required(VERSION 3.1)

PROJECT(cam)

SET(INSTALL_EXEC_PREFIX "${INSTALL_PREFIX}/bin")

INCLUDE(FindPkgConfig)
pkg_check_modules(APP_PKGS REQUIRED opencv)

FOREACH (flag ${APP_PKGS_CFLAGS})
    SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(SRCS
	src/cam.cpp
)

ADD_EXECUTABLE(cam ${SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${APP_PKGS_LDFLAGS})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_EXEC_PREFIX})
